refactor: split compiler (Java 11) and runner (Java 25) modules
Split the compiler module into two:
- compiler/ (Java 11): NativeCompiler, NativeEmitters, CtxBuffer — pure
  compilation logic, no Panama dependency. Can be used by Maven plugin
  on any JDK >= 11.
- runner/ (Java 25): NativeMachine, PanamaExecutor, NativeMachineFactory —
  Panama FFM execution layer for mmap/downcalls.

Key changes:
- CtxBuffer and NativeCompiler.buildCanonicalTypeMap() made public for
  cross-module access
- NativeEmitters switch expressions converted to Java 11 syntax
- EmitContext Stream.toList() replaced with Collectors.toList()
- instanceof pattern matching replaced with traditional cast
- UnsupportedOpcodeTest rewritten to test NativeCompiler directly
  (no Panama dependency)
- Generator updated to reference runner package for NativeMachineFactory

28019 tests pass, 103 skipped. ShootoutTest#shootoutHeapsort has a
regression (1 error) — needs investigation.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>